--- a/src/main/resources/templates/bankaccount.html
+++ b/src/main/resources/templates/bankaccount.html
@@ -7,7 +7,6 @@
 
     <h1>Open Bank Account</h1>
     <form th:action="@{/bankaccount}" method="POST">
-
         <div class="form-group">
             <label for="inputCustomer">Customer Id</label>
             <input type="text" class="form-control" name="customerId" id="inputCustomer">
@@ -39,6 +38,7 @@
             <th>CustomerId</th>
             <th>Type</th>
             <th>Balance</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -47,7 +47,12 @@
             <td th:text="${account.customerId}"></td>
             <td th:text="${account.type}"></td>
             <td th:text="${account.balance}"></td>
+            <td>
+                <a class="btn btn-primary"  th:href="@{/bankaccount/edit/{id}(id=${account.id})}">Edit</a>
+            </td>
         </tr>
+
         </tbody>
     </table>
+
 </div>
